Revert "changes in repo - service for code quality improvements"
This reverts commit 294c0eacf5165563e2188f852d7736ed87772f34.